search ajax completed

--- a/cert_viewer/templates/base.html
+++ b/cert_viewer/templates/base.html
@@ -9,28 +9,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-    <link href="//code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" rel="Stylesheet"></link>
-    <script src="//code.jquery.com/jquery-2.2.0.min.js"></script>
-    <script src="//code.jquery.com/ui/1.10.2/jquery-ui.js" ></script>
-
-    <script type="text/javascript">
-    $(function() {
-        $("#autocomplete").autocomplete({
-            source:function(request, response) {
-                $.getJSON("{{url_for('autocomplete')}}",{
-                    q: request.term, // in flask, "q" will be the argument to look for using request.args
-                }, function(data) {
-                    response(data.matching_results); // matching_results from jsonify
-                });
-            },
-            minLength: 1,
-            select: function(event, ui) {
-                console.log(ui.item.value); // not in your question, but might help later
-            }
-        });
-    })
-
-    </script>
+    
+  </head>
 
   <body>
 
@@ -45,7 +25,12 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
       <form class="form-inline mr-1">
-              <input type="text" id="autocomplete" name="autocomplete" class="form-control" placeholder="Search.....">
+              <div class="input-group">
+              <input type="text" id="searchForm" class="form-control" placeholder="Search....." aria-label="Recipient's username" aria-describedby="basic-addon2">
+              <div class="input-group-append">
+                <button class="btn fa fa-search " style="background: white" id="basic-addon2"></button>
+              </div>
+            </div>
       </form>
       
           {% if current_user.is_authenticated %}
@@ -78,8 +63,6 @@
   </body>
 </html>
 
-  
-  
 <style>
     body{
         padding-top: 100px;
