--- a/cert_viewer/templates/base.html
+++ b/cert_viewer/templates/base.html
@@ -25,7 +25,8 @@ $(function() {
         },
         minLength: 2,
         select: function(event, ui) {
-            console.log(ui.item.value); // not in your question, but might help later
+          var username = ui.item.value;
+          window.location.href = 'profile/'+ username.toString(); // not in your question, but might help later
         }
     });
 })
