--- a/cert_viewer/templates/base.html
+++ b/cert_viewer/templates/base.html
@@ -26,7 +26,7 @@ $(function() {
         minLength: 2,
         select: function(event, ui) {
           var username = ui.item.value;
-          window.location.href = 'profile/'+ username.toString(); // not in your question, but might help later
+          window.location.href = '/profile/'+ username.toString(); 
         }
     });
 })
