--- a/cert_viewer/templates/ethkeys.html
+++ b/cert_viewer/templates/ethkeys.html
@@ -7,7 +7,7 @@
 
 {% block content %}
     <div class="issuer-logo">
-        <img src="{{ theme_static(config.ISSUER_LOGO_PATH) }}"/>
+        <img src="{{ person.issuer_logo_file }}" width="150px" height="150px" />
     </div>
     <div class="row hide-on-print">
         <div class="col-md-6 col-sm-8 col-xs-12">
