--- a/cert_viewer/templates/request.html
+++ b/cert_viewer/templates/request.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="issuer-logo">
-        <img src="{{ theme_static(config.ISSUER_LOGO_PATH) }}"/>
+        <img src="person.issuer_logo_file" class="img-responsive" alt="Your logo"/>
     </div>
     <div class="row">
         <div>
