--- a/cert_viewer/templates/profile.html
+++ b/cert_viewer/templates/profile.html
@@ -18,7 +18,7 @@
           <a href="#"><span class="fa fa-facebook"></i></a>
             </div>
             <div class="card-footer text-muted text-center">
-           <button type="submit" style="margin-top: 20px" class="btn btn-primary btn-block">Contact</button>
+           <button type="submit" style="margin-top: 20px" class="btn btn-primary btn-block" onclick="window.location.href='/request'">Contact</button>
             </div>
             </div>
     </div>
