--- a/cert_viewer/themes/aaa/templates/faq.html
+++ b/cert_viewer/themes/aaa/templates/faq.html
@@ -9,7 +9,7 @@
 {% block content %}
     <div class="row">
         <div class="col-md-2 col-sm-2 col-xs-4">
-            <img src="{{ theme_static(config.ISSUER_LOGO_PATH) }}" class="img-responsive" alt="Your logo"/>
+            <img src="{{ person.issuer_logo_file }}" class="img-responsive" alt="Your logo"/>
         </div>
     </div>
     <div class="row">
@@ -18,7 +18,7 @@
             <h5 class="faq-title"><strong>What are the blockchain certificates?</strong></h5>
             <p class="description font-light faq-text">
                 In essence, they are digital representations of your physcial certificates. Technically, we create a
-                JSON that contains the certificate information, then sign and hash it, and place the hash on the Bitcoin
+                JSON that contains the certificate information, then sign and hash it, and place the hash on the Ehtereum
                 blockchain. If you'd like to learn more about their architecture, please check out the <a
                     href="http://www.blockcerts.org/" target="_blank"> Blockchain Certificates Project website </a>.
             </p>
